database communication, crypto

--- a/views/mypage.html
+++ b/views/mypage.html
@@ -10,6 +10,14 @@
         <div class="col-lg-6">
             <h3>Account</h3>
             <p class="account"></p>
+            <form action="/mypage" method="post">
+                <input id="itemType" name="itemType" type="hidden" value="calc_keypair" />
+                <p>
+                    <label>GEFÄHRLICHE AKTION</label>
+                    <label>Neuberechnung des Schlüsselpaars. Das Alte wird verworfen. Ohne Sicherung sind für Sie alle gemeldeten Vorfälle und Datenanalsen sowie Einkäufe verloren.</label>
+                    <input class="btn btn-danger btn-lg" type="submit" value="MongoDB Keypair erneuern">
+                </p>
+            </form>
         </div>
     </div>
 </div>
