--- a/views/navigation.html
+++ b/views/navigation.html
@@ -6,13 +6,15 @@
             <ul class="nav navbar-nav mr-auto">
                 <li class="nav-item"><a href="/report" class="nav-link">Melden</a>
                 </li>
-                <li class="nav-item"><a href="/buy" class="nav-link">Kaufen</a>
-                </li>
                 <li class="nav-item"><a href="/view-blockchain" class="nav-link">Metadaten</a>
                 </li>
                 <li class="nav-item"><a href="/view-database" class="nav-link">Anzeigen</a>
                 </li>
                 <li class="nav-item"><a href="/vote" class="nav-link">Voten</a>
+                </li>
+                <li class="nav-item"><a href="/buy" class="nav-link">Kaufen</a>
+                </li>
+                <li class="nav-item"><a href="/transfer" class="nav-link">Überweisung</a>
                 </li>
                 <li class="nav-item"><a href="/blame" class="nav-link">Verhalten melden</a>
                 </li>
