--- a/views/navigation.html
+++ b/views/navigation.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark navbar-static-top navbar-expand-md">
-    <div class="container">
+    <div class="container-fluid">
         <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span>
         </button> <a class="navbar-brand" href="/home">Incident Reporting</a>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -12,7 +12,7 @@
                 </li>
                 <li class="nav-item"><a href="/vote" class="nav-link">Voten</a>
                 </li>
-                <li class="nav-item"><a href="/buy" class="nav-link">Kaufen</a>
+                <li class="nav-item"><a href="/orders" class="nav-link">Bestellungen</a>
                 </li>
                 <li class="nav-item"><a href="/transfer" class="nav-link">Überweisung</a>
                 </li>
