--- a/views/blame.html
+++ b/views/blame.html
@@ -5,13 +5,89 @@
     <div class="row">
         <div class="col-lg-6">
             <h3>Fehlverhalten Melden</h3>
-            <p>TODO Form // Tabelle
+            <p>
+                <form action="/blame" method="post">
+                    <table>
+                        <input type="text" id="freeze" name="freeze" value="freeze" hidden />
+                        <tr>
+                            <P>
+                                <td><label>* Nutzer mit Fehlverhalten</label></td>
+                                <td><input type="text" id="blamed" name="blamed" maxlength="20" placeholder="EOSIO User" required /></td>
+                            </P>
+                        </tr>
+                        <tr>
+                            <p>
+                                <td><label>* Begründung</label></td>
+                                <td><input type="text" id="reason" name="reason" maxlength="256" placeholder="256 Zeichen erlaubt." required /></td>
+                            </P>
+                        </tr>
+                        <tr>
+                            <p>
+                                <td colspan="2">
+                                    GEFÄHRLICHE AKTION:<br>
+                                    Wollen Sie das wirklich tun?<br>
+                                    Liegt tatsächlich ein Fehlverhalten vor?<br>
+                                    Eventuell wird der Nutzer gesperrt.
+                                </td>
+                            </p>
+                        </tr>
+                        <tr>
+                            <p>
+                                <td colspan="2"><input class="btn btn-danger btn-lg" type="submit" value="Sperrung beantragen"></td>
+                            </p>
+                        </tr>
+                    </table>
+                </form>
             </p>
         </div>
         <div class="col-lg-6">
-            <h3>Über gemeldetes Fehlverhalten abstimmen</h3>
-            <p>TODO Form // Tabelle
+            <h3>Entsperrung eines Nutzers beantragen</h3>
+            <p>
+                <form action="/blame" method="post">
+                    <table>
+                        <input type="text" id="freeze" name="freeze" value="unfreeze" hidden />
+                        <tr>
+                            <P>
+                                <td><label>* Gesperrter Nutzer</label></td>
+                                <td><input type="text" id="blamed" name="blamed" maxlength="20" placeholder="EOSIO User" required /></td>
+                            </P>
+                        </tr>
+                        <tr>
+                            <p>
+                                <td><label>* Begründung</label></td>
+                                <td><input type="text" id="reason" name="reason" maxlength="256" placeholder="256 Zeichen erlaubt." required /></td>
+                            </P>
+                        </tr>
+                        <tr>
+                            <p>
+                                <td colspan="2">
+                                    GEFÄHRLICHE AKTION:<br>
+                                    Wollen Sie das wirklich tun?<br>
+                                    Bei Erfolg wird eine Beschwerde abgezogen<br>
+                                    und der Nutzer wieder freigegeben.</td>
+                            </p>
+                        </tr>
+                        <tr>
+                            <p>
+                                <td colspan="2"><input class="btn btn-danger btn-lg" type="submit" value="Entsperrung beantragen"></td>
+                            </p>
+                        </tr>
+                    </table>
+                </form>
             </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="error"></p>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="row">
+            <div class="col-lg-12">
+                <h3>Gesuche</h3>
+                <p class="blamings"></p>
+            </div>
         </div>
     </div>
 </div>
