--- a/views/report.html
+++ b/views/report.html
@@ -42,4 +42,9 @@
             </p>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="error"></p>
+        </div>
+    </div>
 </div>
