--- a/views/view-blockchain.html
+++ b/views/view-blockchain.html
@@ -1,11 +1,13 @@
 <div class="jumbotron text-center">
     <h1>Dashboard: Vorfälle und Datenanalysen der Blockchain</h1>
 </div>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-6">
-            <h3>Daten aus der Blockchain</h3>
-            <p class="items"></p>
-        </div>
-    </div>
+<div class="container-fluid">
+	<div class="row justify-content-center">
+	    <div class="row">
+		    <div class="col-lg-12">
+		        <h3>Daten aus der Blockchain</h3>
+		        <p class="items"></p>
+		    </div>
+	    </div>
+	</div>
 </div>
