--- a/views/view-database.html
+++ b/views/view-database.html
@@ -1,11 +1,13 @@
 <div class="jumbotron text-center">
     <h1>Daten aus der Datenbank</h1>
 </div>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-6">
-            <h3>Daten aus der Datenbank</h3>
-            <p class="items"></p>
+<div class="container-fluid">
+	<div class="row justify-content-center">
+	    <div class="row">
+		    <div class="col-lg-12">
+	            <h3>Daten aus der Datenbank</h3>
+	            <p class="items"></p>
+	        </div>
         </div>
     </div>
 </div>
