--- a/views/mypage.html
+++ b/views/mypage.html
@@ -3,6 +3,7 @@
 </div>
 <div class="container">
     <div class="row">
+
         <div class="col-lg-6">
             <h3>Docker Endpoints</h3>
             <p class="endpoints"></p>
@@ -17,6 +18,7 @@
                     <label>Neuberechnung des Schlüsselpaars. Das Alte wird verworfen. Ohne Sicherung sind für Sie alle gemeldeten Vorfälle und Datenanalsen sowie Einkäufe verloren.</label>
                     <input class="btn btn-danger btn-lg" type="submit" value="MongoDB Keypair erneuern">
                 </p>
+                <p class="error"></p>
             </form>
         </div>
     </div>
