--- a/views/navigation.html
+++ b/views/navigation.html
@@ -6,11 +6,9 @@
             <ul class="nav navbar-nav mr-auto">
                 <li class="nav-item"><a href="/report" class="nav-link">Melden</a>
                 </li>
-                <li class="nav-item"><a href="/view-blockchain" class="nav-link">Metadaten</a>
+                <li class="nav-item"><a href="/view-blockchain" class="nav-link">Dashboard</a>
                 </li>
                 <li class="nav-item"><a href="/view-database" class="nav-link">Anzeigen</a>
-                </li>
-                <li class="nav-item"><a href="/vote" class="nav-link">Voten</a>
                 </li>
                 <li class="nav-item"><a href="/orders" class="nav-link">Bestellungen</a>
                 </li>
