--- a/views/orders.html
+++ b/views/orders.html
@@ -8,8 +8,13 @@
             <p class="myOrders"></p>
         </div>
         <div class="col-lg-6">
-            <h3>Alle Bestellungen</h3>
+            <h3>Meine Aufträge</h3>
             <p class="allOrders"></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col lg-12">
+            <p class="error"></p>
         </div>
     </div>
 </div>
