--- a/views/view-database.html
+++ b/views/view-database.html
@@ -1,11 +1,11 @@
 <div class="jumbotron text-center">
-    <h1>Daten aus der Datenbank</h1>
+    <h1>Entschlüsselte Daten</h1>
 </div>
 <div class="container-fluid">
 	<div class="row justify-content-center">
 	    <div class="row">
 		    <div class="col-lg-12">
-	            <h3>Daten aus der Datenbank</h3>
+	            <h3>Detailansicht</h3>
 	            <p class="error"></p>
 	            <p class="items"></p>
 	        </div>
