--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -62,6 +62,7 @@ td, th {
     text-align: center;
     padding: 5px;
     border-radius: 5px;
+    font-weight: bold;
 }
 
 .label-ok {
@@ -78,6 +79,7 @@ td, th {
     text-align: center;
     padding: 5px;
     border-radius: 5px;
+    font-weight: bold;
 }
 
 .label-danger {
