--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-lg-6">
             <h3>Moderne Technologie</h3>
-            <p>Das Beste aus IT-Security, Datamining, aktuellen Webtechnologien und DevOps mit der schnellen und ressourcenschonenden EOS Blockchain, der leistungsfähigen MongoDB, dem flexiblen Node.js und dem effizienten Docker.
+            <p>Eine Architektur basierend auf der effizienten und dezentralen EOS Blockchain und einem Replica Set der MongoDB als Off-Chain Speicher. Des Weitern wird das Frontend mittels Node.js bereitgestellt.
             </p>
         </div>
     </div>
