--- a/views/navigation.html
+++ b/views/navigation.html
@@ -6,7 +6,7 @@
             <ul class="nav navbar-nav mr-auto">
                 <li class="nav-item"><a href="/report" class="nav-link">Melden</a>
                 </li>
-                <li class="nav-item"><a href="/view-blockchain" class="nav-link">Dashboard</a>
+                <li class="nav-item"><a href="/dashboard" class="nav-link">Dashboard</a>
                 </li>
                 <li class="nav-item"><a href="/view-database" class="nav-link">Anzeigen</a>
                 </li>
