--- a/views/navigation.html
+++ b/views/navigation.html
@@ -8,7 +8,7 @@
                 </li>
                 <li class="nav-item"><a href="/dashboard" class="nav-link">Dashboard</a>
                 </li>
-                <li class="nav-item"><a href="/view-database" class="nav-link">Anzeigen</a>
+                <li class="nav-item"><a href="/view" class="nav-link">Anzeigen</a>
                 </li>
                 <li class="nav-item"><a href="/orders" class="nav-link">Bestellungen</a>
                 </li>
