--- a/views/blame.html
+++ b/views/blame.html
@@ -27,7 +27,7 @@
                                     GEFÄHRLICHE AKTION:<br>
                                     Wollen Sie das wirklich tun?<br>
                                     Liegt tatsächlich ein Fehlverhalten vor?<br>
-                                    Eventuell wird der Nutzer gesperrt.
+                                    Eventuell wird der Nutzer gesperrt und verliert Token.
                                 </td>
                             </p>
                         </tr>
@@ -63,8 +63,8 @@
                                 <td colspan="2">
                                     GEFÄHRLICHE AKTION:<br>
                                     Wollen Sie das wirklich tun?<br>
-                                    Bei Erfolg wird eine Beschwerde abgezogen<br>
-                                    und der Nutzer wieder freigegeben.</td>
+                                    Bei Erfolg wird der Nutzer entsperrt<br>
+                                    und nimmt wieder am Incident Reporting teil.</td>
                             </p>
                         </tr>
                         <tr>
