--- a/views/view.html
+++ b/views/view.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-    <h1>Entschlüsselte Daten</h1>
+    <h1>Threat Intelligence Daten</h1>
 </div>
 <div class="container-fluid">
 	<div class="row justify-content-center">
