--- a/views/template_head.html
+++ b/views/template_head.html
@@ -31,9 +31,15 @@
     <link href="assets/js/plugins/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet"/>
     <!-- CSS Files -->
     <link href="assets/css/argon-dashboard.css?v=1.1.0" rel="stylesheet"/>
+    <link href="css/custom.css" rel="stylesheet"/>
+
+
 </head>
 
 <body class="">
+
+
+
 <nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
     <div class="container-fluid">
         <!-- Toggler -->
@@ -101,7 +107,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link  active " href="about">
+                    <a class="nav-link " href="about">
                         <i class="ni ni-single-02 text-yellow"></i> User profile
                     </a>
                 </li>
