--- a/views/template_head.html
+++ b/views/template_head.html
@@ -92,22 +92,22 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="../examples/tables.html">
+                    <a class="nav-link " href="orders">
                         <i class="ni ni-cart text-red"></i> Orders
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../examples/login.html">
+                    <a class="nav-link" href="transfer">
                         <i class="ni ni-spaceship text-info"></i> Transfer
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../examples/register.html">
+                    <a class="nav-link" href="blame">
                         <i class="ni ni-satisfied text-pink"></i> Blame
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="about">
+                    <a class="nav-link " href="mypage">
                         <i class="ni ni-single-02 text-yellow"></i> User profile
                     </a>
                 </li>
