--- a/views/mypage.html
+++ b/views/mypage.html
@@ -22,10 +22,10 @@
     <!-- Page content -->
     <div class="container-fluid mt--7">
         <div class="row">
-            <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
+            <div class="col-xl-8">
                 <div class="card card-profile shadow">
                     <div class="row justify-content-center">
-                        <div class="col-lg-3 order-lg-2">
+                        <div class="col-lg-12">
                             <div class="card-profile-image">
                                 <a href="#">
                                     <img src="../assets/img/theme/cap.jpg" class="rounded-circle">
@@ -69,31 +69,24 @@
                             <hr/>
                             <br/>
 
-
-                            <div class="container">
-                                <div class="row">
-
-                                    <div class="col-lg-6">
-                                        <h3>Docker Endpoints</h3>
-                                        <p class="endpoints"></p>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <h3>Account</h3>
-                                        <p class="account"></p>
-                                        <form action="/mypage" method="post">
-                                            <input id="itemType" name="itemType" type="hidden" value="calc_keypair"/>
-                                            <p>
-                                                <label class="active">Dangerous Action</label>
-                                                <input class="btn btn-danger btn-lg" type="submit"
-                                                       value="Recalculate keypair (at your own risk)">
-                                            </p>
-                                            <p class="error"></p>
-                                        </form>
-                                    </div>
-                                </div>
+                            <div class="endpointcontainer">
+                                <strong>Docker Endpoints</strong>
+                                <p class="endpoints"></p>
+                                <h3>Account</h3>
+                                <p class="account"></p>
+                                <form action="/mypage" method="post">
+                                    <input id="itemType" name="itemType" type="hidden" value="calc_keypair"/>
+                                    <hr/>
+                                    <label class="active">Dangerous Action</label>
+                                    <br/>
+                                    <input class="btn btn-danger btn-lg" type="submit"
+                                           value="Recalculate keypair (at your own risk)">
+                                    <p class="error"></p>
+                                </form>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
 
