--- a/views/orders.html
+++ b/views/orders.html
@@ -1,20 +1,66 @@
-<div class="jumbotron text-center">
-    <h1>Bestellungen</h1>
+<nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+    <div class="container-fluid">
+        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block">Orders</a>
+    </div>
+</nav>
+<!-- Header -->
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
+     style="min-height: 300px; background-image: url(../assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
+    <!-- Mask -->
+    <span class="mask bg-gradient-default opacity-8"></span>
+    <!-- Header container -->
+    <div class="container-fluid d-flex align-items-center">
+
+    </div>
 </div>
-<div class="container">
+<!-- Page content -->
+<div class="container-fluid mt--7">
     <div class="row">
-        <div class="col-lg-6">
-            <h3>Meine Bestellungen</h3>
-            <p class="myOrders"></p>
+
+        <div class="col-xl-12 order-xl-1">
+            <div class="card bg-secondary shadow">
+                <div class="card-header bg-white border-0">
+                    <div class="row align-items-center">
+                        <div class="col-8">
+                            <h3 class="mb-0">Incident Information</h3>
+                        </div>
+                        <div class="col-4 text-right">
+                            <a href="#!" class="btn btn-sm btn-primary">Report to Blockchain</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <h3>My Orders</h3>
+                                <p class="myOrders"></p>
+                            </div>
+                            <div class="col-lg-6">
+                                <h3>All Orders</h3>
+                                <p class="allOrders"></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col lg-12">
+                                <p class="error"></p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
         </div>
-        <div class="col-lg-6">
-            <h3>Meine Aufträge</h3>
-            <p class="allOrders"></p>
-        </div>
+
     </div>
     <div class="row">
-        <div class="col lg-12">
+        <div class="col-lg-12">
             <p class="error"></p>
         </div>
     </div>
 </div>
+
+
+
+
