--- a/views/template_head.html
+++ b/views/template_head.html
@@ -39,7 +39,6 @@
 <body class="">
 
 
-
 <nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
     <div class="container-fluid">
         <!-- Toggler -->
@@ -74,15 +73,26 @@
                 </div>
             </div>
 
+            <h6 class="navbar-heading text-muted">Buy</h6>
             <!-- Navigation -->
             <ul class="navbar-nav">
-                <li class="nav-item  class=" active>
-                    <a class=" nav-link " href="dashboard">
+                <li class="nav-item">
+                    <a class="nav-link" href="dashboard">
                         <i class="ni ni-tv-2 text-primary"></i> Dashboard
                     </a>
                 </li>
-                <li class="nav-item  class=" active>
-                    <a class=" nav-link " href="report">
+                <li class="nav-item">
+                    <a class="nav-link " href="orders">
+                        <i class="ni ni-cart text-red"></i> Orders
+                    </a>
+                </li>
+            </ul>
+            <hr class="my-3">
+
+            <h6 class="navbar-heading text-muted">Sell</h6>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="report">
                         <i class="ni ni-email-83 text-green"></i> Report
                     </a>
                 </li>
@@ -91,16 +101,21 @@
                         <i class="ni ni-bullet-list-67 text-blue"></i> Overview
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="orders">
-                        <i class="ni ni-cart text-red"></i> Orders
-                    </a>
-                </li>
+
+
+            </ul>
+            <hr class="my-3">
+
+
+            <h6 class="navbar-heading text-muted">Verify</h6>
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="transfer">
-                        <i class="ni ni-spaceship text-info"></i> Transfer
+                        <i class="ni ni-briefcase-24 text-gray-dark"></i> Balances
                     </a>
                 </li>
+
+
                 <li class="nav-item">
                     <a class="nav-link" href="blame">
                         <i class="ni ni-satisfied text-pink"></i> Blame
