--- a/views/transfer.html
+++ b/views/transfer.html
@@ -1,27 +1,61 @@
-<div class="jumbotron text-center">
-    <h1>Eine Überweisung tätigen</h1>
+<nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+    <div class="container-fluid">
+        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="../index.html">Transfer Data</a>
+    </div>
+</nav>
+<!-- Header -->
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
+     style="min-height: 300px; background-image: url(../assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
+    <span class="mask bg-gradient-default opacity-8"></span>
+    <div class="container-fluid">
+        <div class="header-body">
+            <!-- Card stats -->
+        </div>
+    </div>
 </div>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="row">
-            <div class="col-lg-12">
-                <p><form action="/transfer" method="post"><table><tr>
-                    <td><label>* An</label></td>
-                    <td><input type="text" id="to" name="to" maxlength="20" placeholder="EOSIO User" required /></td>
-                    <td><label>* Betrag</label></td>
-                    <td><input type="number" id="amount" name="amount"  min=0  placeholder="0" required /></td>
-                    <td><input class="btn btn-primary btn-lg" type="submit" value="Überweisen"></td>
-                </tr></table></form></p>
+<div class="container-fluid mt--7">
+
+
+    <!-- Table -->
+    <div class="row">
+        <div class="col">
+            <div class="card shadow">
+                <div class="card-header border-0">
+                    <h3 class="mb-0">Balance Sheet</h3>
+                    <hr/>
+
+                    <div class="row justify-content-center">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h4>Manual Transfer</h4>
+                                <form action="/transfer" method="post">
+                                    <table>
+                                        <tr>
+                                            <td><label>* To</label></td>
+                                            <td><input type="text" id="to" name="to" maxlength="20"
+                                                       placeholder="EOSIO User" required/>
+                                            </td>
+                                            <td><label>* Amount</label></td>
+                                            <td><input type="number" id="amount" name="amount" min=0 placeholder="0"
+                                                       required/></td>
+                                            <td><input class="btn btn-primary btn-lg" type="submit" value="Überweisen">
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </form>
+                                <p class="error"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="table-responsive">
+
+                </div>
                 <p class="error"></p>
             </div>
         </div>
     </div>
-    <div class="row justify-content-center">
-        <div class="row">
-            <div class="col-lg-12">
-                <h3>EOSIO Users</h3>
-                <p class="users"></p>
-            </div>
-        </div>
-    </div>
 </div>
+
+
+
