--- a/views/view.html
+++ b/views/view.html
@@ -1,14 +1,34 @@
-<div class="jumbotron text-center">
-    <h1>Threat Intelligence Daten</h1>
+<nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+	<div class="container-fluid">
+		<a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="../index.html">Overview</a>
+	</div>
+</nav>
+<!-- Header -->
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 300px; background-image: url(../assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
+	<span class="mask bg-gradient-default opacity-8"></span>
+	<div class="container-fluid">
+		<div class="header-body">
+			<!-- Card stats -->
+		</div>
+	</div>
 </div>
-<div class="container-fluid">
-	<div class="row justify-content-center">
-	    <div class="row">
-		    <div class="col-lg-12">
-	            <h3>Detailansicht</h3>
-	            <p class="error"></p>
-	            <p class="items"></p>
-	        </div>
-        </div>
-    </div>
+<div class="container-fluid mt--7">
+	<!-- Table -->
+	<div class="row">
+		<div class="col">
+			<div class="card shadow">
+				<div class="card-header border-0">
+					<h3 class="mb-0">Incident Overview</h3>
+				</div>
+				<div class="table-responsive">
+
+
+				</div>
+				<p class="error"></p>
+			</div>
+		</div>
+	</div>
 </div>
+
+
+
